Fix: Update build configuration and script loading for GitHub Pages

--- a/index.html
+++ b/index.html
@@ -127,8 +127,7 @@
       }
     </script>
     
-    <!-- Defer non-critical JavaScript -->
-    <script type="module" src="/src/main.jsx" defer></script>
+    <script type="module" src="./src/main.jsx"></script>
     
     <!-- Inline the intersection observer polyfill for lazy loading -->
     <script>
